test/sematest/invalid/InvalidMethodCalls.java

class InvalidMethodCalls {

	
	public static void main(String[] args) {
		
		InvalidMethodCalls calls=new InvalidMethodCalls();
		calls.nothing(true);
	}
	
	public void nothing()
	{
		
	}
}
